[package]
name = "libslug"
version = "0.1.0"
edition = "2021"
keywords = ["crypto","cryptography","encryption","digest","signature"]
categories = ["cryptography"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
description = "A Rust Library For Cryptography Intended For Slug20 That Supports X59 Certificate Format and Post-Quantum Cryptography"
repository = "https://github.com/sileneundula/libslug"


[dependencies]
# Curve25519 ECIES Encryption
# ecies-ed25519 = {version = "0.5.1", features=["serde"]}
ecies-ed25519 = {package="ecies-ed25519-silene", version="0.1.0", features=["serde"]}

# Randomness
rand = "0.8.5"
securerand-rs = "0.2.0"

# BIP39
tiny-bip39 = "2.0.0"

# Password Deriviation
argon2 = "0.5.3"

# Security
subtle = "2.6.1"
subtle-encoding = "0.5.1"
zeroize = "1.8.1"

# Serialization
serde = { version = "1.0.0", features=["derive"] }
serde_yaml = "0.9.34"

# Serialization Encryption
serde-encrypt = "0.7.0"

# Encoding
base58 = "0.2.0"
base32 = "0.5.1"


# ML-KEM
ml-kem = "0.2.1"

# Symmetric Encryption
chacha20poly1305 = "0.10.1"

# PQ Signatures
pqcrypto-sphincsplus = "0.7.0"
pqcrypto-traits = "0.3.5"

# Signatures
ed25519-dalek = {version = "2.1.1", features=["rand_core"]}

# Array
hybrid-array = "0.2.3"