[package]
name = "libslug"
version = "0.5.0"
edition = "2021"
keywords = ["crypto","cryptography","encryption","digest","signature"]
categories = ["cryptography"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
description = "A Rust Library For Cryptography Intended For Slug20 That Supports X59 Certificate Format and Post-Quantum Cryptography"
repository = "https://github.com/sileneundula/libslug"


[dependencies]
# Curve25519 ECIES Encryption
# ecies-ed25519 = {version = "0.5.1", features=["serde"]}
ecies-ed25519 = {package="ecies-ed25519-silene", version="0.1.0", features=["serde"]}

# Randomness
rand = "0.8.5"
securerand-rs = "0.2.0"

# BIP39
tiny-bip39 = "2.0.0"

# Password Deriviation
argon2 = "0.5.3"

# Security
subtle = "2.6.1"
subtle-encoding = "0.5.1"
zeroize = "1.8.1"

# Serialization
serde = { version = "1.0.0", features=["derive"] }
serde_yaml = "0.9.34"

# Serialization Encryption
serde-encrypt = "0.7.0"

# Encoding
base58 = "0.2.0"
base32 = "0.5.1"

# Digest
tiny-keccak = {version = "2.0.2", features=["sha3","shake"]}
sha2 = "0.10.8"
blake2 = "0.10.6"
digest = "0.10.7"
blake3 = "1.6.1"

# ML-KEM
ml-kem = "0.2.1"

# Symmetric Encryption
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"
morus = "0.1.3"

# PQ Signatures
pqcrypto-sphincsplus = "0.7.0"
pqcrypto-traits = "0.3.5"
pqcrypto-falcon = "0.4.0"

# Signatures
ed25519-dalek = {version = "2.1.1", features=["rand_core"]}
schnorrkel = "0.11.4"
ecdsa = "0.16.9"
k256 = {version = "0.13.4", features=["ecdsa"]}
ml-dsa = "0.0.4"
ed448 = "0.4.0"

# One-Time Signatures
leslie_lamport = "0.3.1"
winternitz-ots = "0.3.0"

# PQ

# Array
hybrid-array = "0.2.3"

hybrid-array-new = {package="hybrid-array", version="0.3.1"}
serde-big-array = "0.5.1"